# zkhack-bls-pedersen

./: Cargo.toml  M256.sage  matrix.sage  matrix.sage.py  my_msg_hash.sage
src/: hash.rs  lib.rs  x.rs
