[package]
name = "bls-pedersen"
version = "0.1.0"
authors = ["Kobi Gurkan <kobigurk@gmail.com>"]
edition = "2018"

[dependencies]
ark-std = "0.3"
ark-ff = "0.3"
ark-ec = "0.3"
ark-serialize = "0.3"
ark-bls12-381 = "0.3"
ark-crypto-primitives = "0.3"
rand = "0.8"
rand_chacha = "0.3"
hex = "0.4"
prompt = { git = "https://github.com/kobigurk/zkhack-prompt" }
blake2s_simd = "0.5.11"
nalgebra = "0.29.*"
bitvec = "0.22.*"
ndarray = "0.15.0"
fraction = "0.9.0"
typenum = "*"
num-traits = "*"
num-bigint = "*"

[[bin]]
name = "verify-bls-pedersen"

[lib]
