[package]
name = "bls-pedersen"
version = "0.1.0"
authors = ["Kobi Gurkan <kobigurk@gmail.com>"]
edition = "2018"

[dependencies]
ark-ff = { git = "https://github.com/arkworks-rs/algebra" }
ark-ec = { git = "https://github.com/arkworks-rs/algebra" }
ark-bls12-381 = { git = "https://github.com/mmagician/curves", branch = "remove-unused-quad-nonresidue" }
ark-std = { git = "https://github.com/arkworks-rs/std" }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra" }
ark-crypto-primitives = { git = "https://github.com/mmagician/crypto-primitives", branch = "update-ff" }
rand = "0.8"
rand_chacha = "0.3"
hex = "0.4"
prompt = { git = "https://github.com/kobigurk/zkhack-prompt" }
blake2s_simd = "0.5.11"
nalgebra = "0.31.0"
bitvec = "1.0.0"

[[bin]]
name = "verify-bls-pedersen"

[lib]

[patch.crates-io]
ark-ff = { git = "https://github.com/arkworks-rs/algebra" }
ark-ec = { git = "https://github.com/arkworks-rs/algebra" }
ark-bls12-381 = { git = "https://github.com/mmagician/curves", branch = "remove-unused-quad-nonresidue" }
ark-std = { git = "https://github.com/arkworks-rs/std" }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra" }
ark-crypto-primitives = { git = "https://github.com/mmagician/crypto-primitives", branch = "update-ff" }
ark-sponge = { git = "https://github.com/arkworks-rs/sponge" }